--- a/web/package.json
+++ b/web/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "moment": "^2.22.0",
     "ngx-owl-carousel": "^2.0.7",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
