--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
     "ts:watch": "tsc -w"
   },
   "dependencies": {
+    "@types/express-jwt": "0.0.40",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "1.18.2",
     "compression": "1.7.1",
@@ -17,6 +18,7 @@
     "dotenv": "^4.0.0",
     "express": "4.16.2",
     "helmet": "3.9.0",
+    "jwks-rsa": "^1.2.1",
     "lodash": "4.17.4",
     "mongoose": "5.0.0-rc1",
     "morgan": "1.9.0",
