--- a/web/package.json
+++ b/web/package.json
@@ -58,7 +58,9 @@
   },
   "jest": {
     "preset": "jest-preset-angular",
-    "roots": [ "<rootDir>/src/" ],
+    "roots": [
+      "<rootDir>/src/"
+    ],
     "setupTestFrameworkScriptFile": "<rootDir>/src/setup-jest.ts"
   }
 }
