--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "express": "4.16.2",
     "helmet": "3.9.0",
     "lodash": "4.17.4",
+    "moment": "^2.22.0",
     "mongoose": "5.0.0-rc1",
     "morgan": "1.9.0",
     "nodemailer": "^4.6.4"
